# Laptop-Backup

./: README.md
C/: Test.c  Test_cases.c
C++/: CMakeLists.txt  test.cpp
C++/CLRS/: Binary_Search.cpp  Bubble_Sort.cpp  Insertion_Sort.cpp  Merge_Sort.cpp  Selection_Sort.cpp
C++/Data Structures/: Doubly_linked_list.cpp  Imp Pts.txt  MST_rel_algo_from_python.cpp  MST_rel_algo_from_python.h  tempCodeRunnerFile.cpp
C++/End Sem Lab/: Q1.cpp  Q1.h  Q2.cpp  Q2.h
C++/End Sem Lab Pr Qns - DP/: Coin_Change_2_leetcode.cpp  Coin_Change_2_leetcode.h  Coin_Change_DP.cpp  Coin_Change_DP.h  Find_Postion.cpp  Find_Postion.h  Knapsack_without_profit.cpp  Knapsack_without_profit.h  LCIS.cpp  LCIS.h  LCS.h  LCS_subseq.cpp  LCS_subseq.h  LCS_subword.cpp  LIS_LDS_LAS.cpp  LIS_LDS_LAS.h  Longest_Bitonic_seq.cpp  Longest_Bitonic_seq.h  Longest_Double_Increasing_seq.cpp  Longest_Double_Increasing_seq.h  Longest_Oscillating_seq.h  Set_cover.cpp  Set_cover.h  Smallest_Oscillating_seq_LAS_used.cpp  Weakly_increasing.cpp  Weakly_increasing.h
C++/End Sem Lab Pr Qns - Graph/: Bellman_Ford_neg_cycle.cpp  Bellman_Ford_neg_cycle.h  Connected_componenets_Dir_graph.cpp  Connected_componenets_Dir_graph.h  Dist_src_dst_via_compulsory_node.cpp  Dist_src_dst_via_compulsory_node.h  Form_DAG_from_Mixed_graph.cpp  Form_DAG_from_Mixed_graph.h
C++/LUV - CP and DSA/: AggrCows_Spoj.cpp  EP_14.cpp  EP_15.cpp  EP_16.cpp  Intro to C++.txt  LUV.cpp  Modulo.txt  Overflow.txt  Prefix_Sum.cpp  Strings and getline().txt  stacks.cpp
C++/LUV - CP and DSA/C++ STL/: C++ STL Data types.docx  Monk_Candies.cpp  STL.cpp  lower_upper_bounds.cpp
C++/Leet Code resolution/: Q1368.cpp  Q1368.h  Q787.cpp  Q787.h  Q959.cpp  Q959.h  Q_1319.cpp  Q_1319.h  Q_1466.cpp  Q_2045.cpp  Q_2045.h  Q_210.cpp  Q_210.h  Q_22.cpp  Q_2487.cpp  Q_36.cpp
C++/W3 Schools/: Coordinates_Circles.cpp  Imp Pts.txt  Inheritance.cpp  Inheritance_pts.docx  OOPS.cpp  insert_method_in_cpp.cpp
CS 201 (Algorithm)/: CMakeLists.txt  Trial.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 1/: Max__subarr_sum.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 2/: Q1(a).cpp  Q1(b).cpp  Q1(c).cpp  Q2.cpp  Q3.cpp  Q4.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 3/: Q1.cpp  Q2.cpp  Q3_extra_qn.cpp  Q4_extra_qn.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 4/: Q1_Closest_Pari.cpp  Q2_max_overlap.cpp  Q2_max_overlap_DnC.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 5/: Heap_PQ.cpp  Q1.cpp  Q2.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 6/: Q1.cpp  Q2.cpp  tempCodeRunnerFile.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 7/: LAS_Q1.cpp  LPS_Q2.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 8/: Q1.cpp  Q2.cpp
CS 201 (Algorithm)/Lab Assgn/Lab 9/: Q1.cpp  Q2.cpp  Q3.cpp
CS 201 (Algorithm)/Lab Assgn/Problem Sheet DnC 1/: Q1.cpp  Q2.cpp  Q3.cpp  Q4.cpp  Q5.cpp  Q6.cpp  Q7.cpp  Q8.cpp  Q9.cpp
CS 201 (Algorithm)/Lab Assgn/Problem Sheet DnC 2/: Closest_Pair_Manhattan.cpp  Number_of_Line_intersections.cpp
CS 201 (Algorithm)/Lab Assgn/Problem Sheet Greedy/: Q1.cpp  Q2.cpp  Q4.cpp  Q5.cpp  Q6.cpp  tempCodeRunnerFile.cpp
CS 201 (Algorithm)/Lecture Qns/Python/: Coin Change using DP.py  Count inversions.py  Fibonacci Number using DP.py  Find Max and 2nd max.py  Find Max and Min.py  Fractional Knapsack.py  Interval Containment.py  Job Scheduling.py  Knapsack without profit.py  Max Slope.py  Max non overlapping arcs.py  Maximize Trading Profit with Daily Rent Costs.py  Maximum number of non overlapping intervals.py  Median of Medians.py  Merge and Cnt on sorted arrays.py  Test.py
CS 201 (Algorithm)/Lecture Qns/Python/DNC Problem Sheet/: Closest Pair 2D - Manhattan Distance.py  Closest Pair 2D.py  Convex Hull.py  Convex Hull_alt.py  Min Heap DnC.py  Number of Line intersections.py  Number of line intersections on unit circle.py  Solution of a QE.py  k closest numbers to median.py
CS 201 (Algorithm)/Lecture Qns/Python/Greedy/: Fractional Knapsack using MoM.py  Min number of classrooms.py  Min number of unit length closed intervals.py  Min steps.py  Smallest Cover.py  Weighted Job Scheduling.py  Weighted Medians.py
CS 201 (Algorithm)/Lecture Qns/c++/: Bisection_root_finding.cpp  Closest_Pair.cpp  Count_inversions.cpp  Interval_Containment.cpp  Job_scheduling.cpp  Karatsuba.cpp  Max_2nd_max.cpp  Max_2nd_max_DNC.cpp  Max_DNC.cpp  Meadin_of_Medians.cpp  Merge_and_Count.cpp  Min_Max.cpp  Min_Max_DNC.cpp  Pow_of_number.cpp  Test.cpp  max_profit.cpp
CS 201 (Algorithm)/Mid Sem Algo/: Q1 - Solution.py  Q1.cpp  Q1.txt  Q2.txt
Leet Code/: 1 - Two Sum.py  1008 - Construct BST from preorder.py  1011 -  Capacity to Ship Packages within D days.py  1019 - Next greater node in linked list.py  1020 - Number of Enclaves.py  1038 - BST to greater sum tree.py  104 - Max Depth of BT.py  1046 - Last Stone Weight.py  109 - Convert Sorted List to BST.py  1095 - Find in Mountain Array.py  1106 - Parsing a boolean Expression.py  111 - Min Depth of BT.py  112 - Path Sum.py  113 - Path Sum 2.py  114 - Flatten BT to Linked List.py  1161 - Maximum Level Sum of a Binary Tree.py  121 - Best Time to Buy and Sell Stock.py  1249 - Min Remove to Make Valid Parentheses.py  1254 - Number of closed Islands.py  128 - Longest Consecutive Sequence.py  (+272 more)
(+679 files in other folders)
