cmake_minimum_required(VERSION 3.29)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
    CLRS/Binary_Search.cpp
    CLRS/Bubble_Sort.cpp
    CLRS/Insertion_Sort.cpp
    CLRS/Merge_Sort.cpp
    CLRS/Selection_Sort.cpp
    "Data Structures/Doubly_linked_list.cpp"
    "Data Structures/tempCodeRunnerFile.cpp"
    "Leet Code resolution/Q_22.cpp"
    "Leet Code resolution/Q_2487.cpp"
    "Leet Code resolution/Q_36.cpp"
    "LUV - CP and DSA/C++ STL/lower_upper_bounds.cpp"
    "LUV - CP and DSA/C++ STL/Monk_Candies.cpp"
    "LUV - CP and DSA/C++ STL/STL.cpp"
    "LUV - CP and DSA/AggrCows_Spoj.cpp"
    "LUV - CP and DSA/EP_14.cpp"
    "LUV - CP and DSA/EP_15.cpp"
    "LUV - CP and DSA/EP_16.cpp"
    "LUV - CP and DSA/LUV.cpp"
    "LUV - CP and DSA/Prefix_Sum.cpp"
    "LUV - CP and DSA/stacks.cpp"
    "W3 Schools/Coordinates_Circles.cpp"
    "W3 Schools/Inheritance.cpp"
    "W3 Schools/insert_method_in_cpp.cpp"
    "W3 Schools/OOPS.cpp"
    test.cpp
    Trial.cpp
        "Leet Code resolution/Q959.cpp"
        "Leet Code resolution/Q_210.h"
        "Leet Code resolution/Q_210.cpp"
        "Leet Code resolution/Q_1466.cpp"
        "Leet Code resolution/Q_2045.cpp"
        "Leet Code resolution/Q_1319.cpp"
        "Leet Code resolution/Q787.cpp"
        "Data Structures/MST_rel_algo_from_python.cpp"
        "Leet Code resolution/Q1368.cpp"
        "End Sem Lab Pr Qns - Graph/Dist_src_dst_via_compulsory_node.cpp"
        "End Sem Lab Pr Qns - Graph/Form_DAG_from_Mixed_graph.cpp"
        "End Sem Lab Pr Qns - Graph/Connected_componenets_Dir_graph.cpp"
        "End Sem Lab Pr Qns - Graph/Bellman_Ford_neg_cycle.cpp"
        "End Sem Lab Pr Qns - DP/Knapsack_without_profit.cpp"
        "End Sem Lab Pr Qns - DP/Coin_Change_DP.cpp"
        "End Sem Lab Pr Qns - DP/Coin_Change_2_leetcode.cpp"
        "End Sem Lab Pr Qns - DP/LIS_LDS_LAS.cpp"
        "End Sem Lab Pr Qns - DP/Longest_Bitonic_seq.cpp"
        "End Sem Lab Pr Qns - DP/Smallest_Oscillating_seq_LAS_used.cpp"
        "End Sem Lab Pr Qns - DP/Weakly_increasing.cpp"
        "End Sem Lab Pr Qns - DP/Longest_Double_Increasing_seq.cpp"
        "End Sem Lab Pr Qns - DP/LCIS.cpp"
        "End Sem Lab Pr Qns - DP/Find_Postion.cpp"
        "End Sem Lab Pr Qns - DP/Set_cover.cpp"
        "End Sem Lab Pr Qns - DP/LCS_subword.cpp"
        "End Sem Lab Pr Qns - DP/LCS_subseq.cpp"
        "End Sem Lab/Q1.cpp"
        "End Sem Lab/Q2.cpp")
