cmake_minimum_required(VERSION 3.29)
project(CS_201__Algorithm_)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS_201__Algorithm_
    "Lab Assgn/Lab 1/Max__subarr_sum.cpp"
    "Lab Assgn/Lab 2/Q1(a).cpp"
    "Lab Assgn/Lab 2/Q1(b).cpp"
    "Lab Assgn/Lab 2/Q1(c).cpp"
    "Lab Assgn/Lab 2/Q2.cpp"
    "Lab Assgn/Lab 2/Q3.cpp"
    "Lab Assgn/Lab 2/Q4.cpp"
    "Lab Assgn/Lab 3/Q1.cpp"
    "Lab Assgn/Lab 3/Q2.cpp"
    "Lab Assgn/Lab 3/Q3_extra_qn.cpp"
    "Lab Assgn/Lab 3/Q4_extra_qn.cpp"
    "Lab Assgn/Lab 4/Q1_Closest_Pari.cpp"
    "Lab Assgn/Lab 4/Q2_max_overlap.cpp"
    "Lab Assgn/Lab 4/Q2_max_overlap_DnC.cpp"
    "Lab Assgn/Lab 5/Heap_PQ.cpp"
    "Lab Assgn/Lab 5/Q1.cpp"
    "Lab Assgn/Lab 5/Q2.cpp"
    "Lab Assgn/Lab 6/Q1.cpp"
    "Lab Assgn/Lab 6/Q2.cpp"
    "Lab Assgn/Lab 6/tempCodeRunnerFile.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q1.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q2.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q3.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q4.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q5.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q6.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q7.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q8.cpp"
    "Lab Assgn/Problem Sheet DnC 1/Q9.cpp"
    "Lab Assgn/Problem Sheet DnC 2/Closest_Pair_Manhattan.cpp"
    "Lab Assgn/Problem Sheet Greedy/Q1.cpp"
    "Lab Assgn/Problem Sheet Greedy/Q2.cpp"
    "Lab Assgn/Problem Sheet Greedy/Q4.cpp"
    "Lab Assgn/Problem Sheet Greedy/Q5.cpp"
    "Lab Assgn/Problem Sheet Greedy/Q6.cpp"
    "Lab Assgn/Problem Sheet Greedy/tempCodeRunnerFile.cpp"
    "Lecture Qns/c++/Bisection_root_finding.cpp"
    "Lecture Qns/c++/Closest_Pair.cpp"
    "Lecture Qns/c++/Count_inversions.cpp"
    "Lecture Qns/c++/Interval_Containment.cpp"
    "Lecture Qns/c++/Job_scheduling.cpp"
    "Lecture Qns/c++/Karatsuba.cpp"
    "Lecture Qns/c++/Max_2nd_max.cpp"
    "Lecture Qns/c++/Max_2nd_max_DNC.cpp"
    "Lecture Qns/c++/Max_DNC.cpp"
    "Lecture Qns/c++/max_profit.cpp"
    "Lecture Qns/c++/Meadin_of_Medians.cpp"
    "Lecture Qns/c++/Merge_and_Count.cpp"
    "Lecture Qns/c++/Min_Max.cpp"
    "Lecture Qns/c++/Min_Max_DNC.cpp"
    "Lecture Qns/c++/Test.cpp"
    Trial.cpp
        "Lab Assgn/Problem Sheet DnC 2/Number_of_Line_intersections.cpp"
        "Lecture Qns/c++/Pow_of_number.cpp"
        "Mid Sem Algo/Q1.cpp"
        "Mid Sem Algo/Q2.cpp"
        "Lab Assgn/Lab 7/LAS_Q1.cpp"
        "Lab Assgn/Lab 7/LPS_Q2.cpp"
        "Lab Assgn/Lab 8/Q1.cpp"
        "Lab Assgn/Lab 8/Q2.cpp"
        "Lab Assgn/Lab 9/Q1.cpp"
        "Lab Assgn/Lab 9/Q3.cpp"
        "Lab Assgn/Lab 9/Q2.cpp")
